﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.1.x
------------------------------------------------------------------------------------------------------------------------

GUI
	Fixed: Literal percent sign must be escaped with another percent sign in translation strings
	Fixed: SQL user hosts must be separated from SQL users to avoid any customer confusion

INSTALLER
	Fixed: Error about unknown IP when attempting to add new IP
	Fixed: lo must not be used as default device when adding new IP (installer)
	Fixed: Unable to upgrade to 1.1.14 (packages file is corrupted - Ubuntu Precise)

------------------------------------------------------------------------------------------------------------------------
1.1.14
------------------------------------------------------------------------------------------------------------------------

2014-09-15: Laurent Declercq
	RELEASE i-MSCP 1.1.14

DAEMON
	Fixed: Wrong version in 'helo' answer string

ENGINE
	Deprecated: Usage of iMSCP::HooksManager package is now deprecated and will be removed in later version
	Fixed: autoinstaller::Functions::doImscpBackup: Name "main::execmode" used only once...
	Fixed: Undefined value in tracker hash (vlogger)
	Renamed: iMSCP::HooksManager to iMSCP::EventManager (iMSCP::HooksManager is now an alias of iMSCP::EventManager)

GUI
	Fixed: Malformed href attributes in alias.php (reseller level)
	Fixed: Malformed href attribute in ticket_system.tpl (admin/reseller levels)
	Fixed: Unable to add custom CNAME DNS resource record using the arobase symbol which is substituted by the zone root
	Updated: Layout according changes from vendor libraries

INSTALLER
	Changed: Downgrade of SQL server is no longer allowed by installer
	Changed: Package uninstallation task is now triggered after packages installation
	Fixed: Accessing non existing config value DATABASE_USER_HOST (upgrade issue)